# kf8-rs

./: .gitignore  Cargo.toml  FORMAT_NOTES.md  README.md
.github/workflows/: checks.yml
examples/: azw_to_epub.rs  epub_to_azw.rs
resources/: README.md  war_and_peace.azw3
src/: builder.rs  constants.rs  lib.rs  tag_map.rs  types.rs
src/serialization/: book.rs  chunk_index.rs  fdst_table.rs  indx_header.rs  mobi_header.rs  mod.rs  palmdoc.rs  palmdoc_header.rs  tag_map.rs  tag_section.rs  tag_table.rs
src/serialization/exth/: mod.rs  read.rs  write.rs
src/serialization/index/: chunk.rs  cncx.rs  index_data_record.rs  index_definition_record.rs  index_meta_definition_record.rs  index_record.rs  mod.rs  new_index.rs  skeleton.rs  types.rs
src/serialization/tag_map/: README.md  definition.rs  entry.rs  mod.rs  read_entry.rs  write_entry.rs
src/utils/: deku.rs  mod.rs
