[package]
name = "kf8"
version = "0.1.0"
edition = "2021"

[dependencies]
hex = "0.4.3"
infer = "0.15.0"
lazy_static = "1.4.0"
nom = "7.1.3"
num_enum = "0.7.2"
palmdoc-compression = { path = "../palmdoc-compression", features = ["calibre"]} #"0.3.0"

[dev-dependencies]
chrono = "0.4.38"
clap = { version = "4.5.4", features = ["derive"] }
epub-builder = "0.7.4"
regex = "1.10.4"
