[package]
name = "kf8"
version = "0.1.0"
edition = "2021"

[dependencies]
cookie-factory = "0.3.3"
hex = "0.4.3"
infer = "0.15.0"
lazy_static = "1.4.0"
nom = "7.1.3"
num_enum = "0.7.2"
palmdoc-compression = { path = "../palmdoc-compression", features = ["calibre"]} #"0.3.0"

[dev-dependencies]
chrono = "0.4.38"
clap = { version = "4.5.4", features = ["derive"] }
epub = "2.1.2"
epub-builder = "0.7.4"
proptest = "1.5.0"
proptest-derive = "0.5.0"
quick-xml = "0.31.0"
regex = "1.10.4"
ux = "0.1.6"
