[package]
name = "kf8"
version = "0.1.0"
edition = "2021"

[dependencies]
binrw = "0.14.0"
byteorder = "1.5.0"
cookie-factory = "0.3.3"
deku = {version = "0.17.0", features = ["logging"]}
env_logger = "0.11.3"
hex = "0.4.3"
infer = "0.15.0"
lazy_static = "1.4.0"
log = "0.4.22"
nom = "7.1.3"
num_enum = "0.7.2"
palmdoc-compression = "0.3.1"
thiserror = "1.0.63"

[dev-dependencies]
chrono = "0.4.38"
clap = { version = "4.5.4", features = ["derive"] }
epub = "2.1.2"
epub-builder = "0.7.4"
pretty_assertions = "1.4.0"
proptest = "1.5.0"
proptest-derive = { version = "0.5.0", features = ["boxed_union"] }
quick-xml = "0.31.0"
rand = "0.8.5"
regex = "1.10.4"
ux = "0.1.6"
